# panel-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: style.css
config/: default.toml
src/: lib.rs  main.rs
src/core/: config.rs  config_loader.rs  item.rs  item_manager.rs  mod.rs  window.rs
src/core/items/: clock.rs  mod.rs
src/core/items/battery/: battery_backend.rs  item.rs  mod.rs  sysfs_backend.rs  upower_backend.rs
src/core/items/cpu/: item.rs  mod.rs  stat_backend.rs
src/core/items/mem/: item.rs  mod.rs  stat_backend.rs
src/core/items/temp/: hwmon_backend.rs  item.rs  lm_sensors_backend.rs  mod.rs  temperature_backend.rs  thermal_zone_backend.rs
src/core/utils/: icon.rs  mod.rs
tests/: basic.rs  item_manager.rs  upower_backend.rs
